logs/Slang/generated/hdlconv/hdlconvertor_p802.sv.log
name: hdlconvertor_p802
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p802.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p802.sv:5:1: error: unknown module 'driver'
driver busar3 (busin[15:12], bushigh[7:4], enh);
^~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p802.sv:6:1: error: unknown module 'driver'
driver busar2 (busin[11:8], bushigh[3:0], enh) ;
^~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p802.sv:7:1: error: unknown module 'driver'
driver busar1 (busin[7:4], buslow[7:4], enl)   ;
^~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p802.sv:8:1: error: unknown module 'driver'
driver busar0 (busin[3:0], buslow[3:0], enl)   ;
^~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p802.sv:17:1: error: unknown module 'driver'
driver busar[3:0]
^~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p802.sv:25:8: error: identifier 'bits' used before its declaration
input [bits-1:0] d;
       ^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p802.sv:24:11: note: declared here
parameter bits = 1;
          ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p802.sv:26:9: error: identifier 'bits' used before its declaration
output [bits-1:0] q;
        ^~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p802.sv:24:11: note: declared here
parameter bits = 1;
          ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p802.sv:29:1: error: unknown module 'DFF'
DFF dff[bits-1:0] (q, d, clk); // create a row of D flip-flops
^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p802.sv:34:8: error: identifier 'M' used before its declaration
input [M-1:0] in ;
       ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p802.sv:33:11: note: declared here
parameter M = 3,N = 4;// M=width,N=depth
          ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p802.sv:35:9: error: identifier 'M' used before its declaration
output [M-1:0] out;
        ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p802.sv:33:11: note: declared here
parameter M = 3,N = 4;// M=width,N=depth
          ^
